--- a/404.html
+++ b/404.html
@@ -2,18 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/fantasy-comparison/favicon.ico">
+    <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/@mdi/font@5.x/css/materialdesignicons.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <title>Vite App</title>
-    <script type="module" crossorigin src="/fantasy-comparison/assets/index.2a13e8a2.js"></script>
-    <link rel="stylesheet" href="/fantasy-comparison/assets/index.9911ad67.css">
   </head>
   <body>
     <div id="app"></div>
-    
+    <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
